--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,7 @@
                 </p>
                 <div class="options">
                     <div>
-                        remember me<input type="checkbox" name="rememberme" id="rememberme">
+                        <input type="checkbox" name="rememberme" id="rememberme">remember me
                     </div>
                     <div>
                         <a href="#">olvide mi password</a>
@@ -39,7 +39,9 @@
                 </div>
             </form>
         </div>
-        <div class="welcome-screen-container"></div>
+        <div class="welcome-screen-container">
+            <img class="imagen" src="imagenes/Añadir_un_título-removebg-preview.png" alt="">
+        </div>
     </div>
 </body>
 </html>
